--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,8 +7,12 @@ body {
 }
 
 a {
-  color: inherit;
+  color: #3f51b5;
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 * {
